syntax = "proto3";

option csharp_namespace = "CatalogService";

package Catalog;

service CatalogService {
  rpc CreateCatalogItem (CatalogItemRequest) returns (CatalogItemResponse);
  rpc GetItemById (Id) returns (CatalogItemResponse);
  rpc RemoveCatalogItem (CatalogItemRequest) returns (Ok);
  rpc UpdateCatalogItem (CatalogItemResponse) returns (Ok);
}

message Id {
  int32 id = 1;
}

message Ok {
  bool ok = 1;
}

message CatalogItemRequest {
  string description = 1;
  string name = 2;
  string pictureFilename = 3;
  float price = 4;
  int32 brandId = 5;
  int32 typeId = 6;
}

message CatalogItemResponse {
  int32 id = 1;
  string description = 2;
  string name = 3;
  string pictureFilename = 4;
  float price = 5;
  int32 brandId = 6;
  int32 typeId = 7;
}
